--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button id="reset">Reset</button>
     </div>
   </div>
-  <script src="index.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
